// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle-stale-action exits success on a successful run 1`] = `
Array [
  Array [
    "Done with mark and sweep!",
  ],
]
`;

exports[`handle-stale-action unmarks on new issue comments 1`] = `
Array [
  Array [
    "Unmarked a thing",
  ],
]
`;

exports[`handle-stale-action works with pull requests as well 1`] = `
Array [
  Array [
    "Unmarked a thing",
  ],
]
`;
